# tabinal

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
npm/: README.md  package.json
npm/scripts/: install.js
src/: app.rs  config.rs  filetree.rs  main.rs  pane.rs  preview.rs  ui.rs
