[package]
name = "tabinal"
version = "1.0.2"
edition = "2021"
description = "A general-purpose TUI terminal multiplexer with split panes, tabs, and file tree"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.8"
vt100 = "0.16"
anyhow = "1.0"
unicode-width = "0.2.1"
arboard = "3.6"
syntect = "5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
